# ChangeLog for dev-java/fop
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/fop/ChangeLog,v 1.61 2009/01/05 20:27:57 serkan Exp $

  05 Jan 2009; Serkan Kaba <serkan@gentoo.org> fop-0.93-r1.ebuild:
  Migrate to EAPI 2 to fix the dependencies.

  27 Sep 2008; Petteri Räty <betelgeuse@gentoo.org> fop-0.94-r1.ebuild:
  Migrate to EAPI 2 for USE dependencies.

  22 Mar 2008; William L. Thomson Jr. <wltjr@gentoo.org> fop-0.94-r1.ebuild:
  Reversing jre/jdk deps, vm determination breaks on EAPI=1 slots :(

  22 Mar 2008; William L. Thomson Jr. <wltjr@gentoo.org> fop-0.94-r1.ebuild:
  Forgot jre/jdk deps

  22 Mar 2008; William L. Thomson Jr. <wltjr@gentoo.org> fop-0.94-r1.ebuild:
  Switched rest of deps to EAPI=1 slot deps

*fop-0.94-r1 (22 Mar 2008)

  22 Mar 2008; William L. Thomson Jr. <wltjr@gentoo.org> -fop-0.94.ebuild,
  +fop-0.94-r1.ebuild:
  Switched to java-virtuals/servlet-api, removed previous revision

*fop-0.94 (10 Nov 2007)

  10 Nov 2007; Vlastimil Babka <caster@gentoo.org>
  -files/0.20.5-buildxml.patch, -files/0.20.5-startscript.patch,
  -files/0.20.5-no-autodetection.patch, -fop-0.20.5-r7.ebuild,
  +fop-0.94.ebuild:
  Version bump, bug #194687. No more ecj forcing, javac seems fine even on
  amd64. Javadoc generation still masked on amd64 though. Also dropped od
  0.20.5 version.

  18 Sep 2007; Petteri Räty <betelgeuse@gentoo.org> fop-0.93-r1.ebuild:
  Add a built_with_use check for dev-java/xmlgraphics-commons and the jpeg use
  flag. Fixes bug #192980.

  29 Aug 2007; Petteri Räty <betelgeuse@gentoo.org> fop-0.20.5-r7.ebuild:
  Remove dependency on ant-tasks as split ant is stable.

  29 Aug 2007; Petteri Räty <betelgeuse@gentoo.org> -fop-0.20.5-r3.ebuild,
  -fop-0.93.ebuild:
  Remove old ebuilds.

  21 Aug 2007; William L. Thomson Jr. <wltjr@gentoo.org> fop-0.93-r1.ebuild:
  amd64 stable, bug #187600.

  15 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org> fop-0.93-r1.ebuild: