@@ -1,4 +1,6 @@
 DIST fop-0.94-src.tar.gz 11853559 RMD160 36f0b928f3511a8da7746b767c31112f3f0f45a2 SHA1 77bdaa5eaa1ba2c5d0c15925e74059680eb1c855 SHA256 b1db5b7a46c529a4b5034a3986b013320452dd2af0984f294b1ddc8a852fa099
+DIST fop-0.95-src.zip 15153053 RMD160 e3b4d34259083ead5ac99b18b5bf6dd44c6b4b62 SHA1 4579e2e65f4441407386a0835d740270089b1eb6 SHA256 690e4dd4a4b6fdf5b18469bf6768115fb5d444c3253bba47e69b0079a739e32a
 EBUILD fop-0.94-r1.ebuild 3261 RMD160 289b7390f910ced709afea7e736af35a9e561240 SHA1 968fc442450c7bda022a9060fd1a504403810cd8 SHA256 5ea37506b28b76281b038111840215dd6a83d6153c74c4481aa63c9ac67f1c3f
-MISC ChangeLog 7973 RMD160 75dfb74abf36ca85a24c022ac57dfe48067dbb28 SHA1 c17b95145397abf4fd7c5c11c945c9c78caddb7b SHA256 a6f730784ddb2100132e3c7e1383ad34e65fe10ac98d637441228c1598cc4ca3
+EBUILD fop-0.95.ebuild 3563 RMD160 e4e8ab221e8a1df1524560eca2ef9ce274134715 SHA1 b7ce8b99e2d32b3630944259bc681946e1a89441 SHA256 be097b9781456e117943d92ecc372e0e9bde08082ea93978ee1b9059282911ce
+MISC ChangeLog 8259 RMD160 249e6df1f86f4a632b3343996038b3095b472de6 SHA1 3401240574c44a3692bb2041f75b132338bffea1 SHA256 bdcf6af5a47d7b2903372a3faf6eac4865ac79973a9960643674b8a43e23a36e
 MISC metadata.xml 427 RMD160 c01df4ec3df7d28b39560a96df475e6f010ddcba SHA1 2d6f93956f852096914452f8e44a0620e3951e55 SHA256 0b6fb333d87a73eff05b69a66715578f1853ed64584307dcaee983ea627af25a
