@@ -1,6 +1,14 @@
 # ChangeLog for dev-java/fop
-# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/fop/ChangeLog,v 1.61 2009/01/05 20:27:57 serkan Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/fop/ChangeLog,v 1.63 2009/05/21 18:00:30 betelgeuse Exp $
+
+  21 May 2009; Petteri Räty <betelgeuse@gentoo.org> fop-0.95.ebuild:
+  Fix the source use flag report in bug #270721.
+
+*fop-0.95 (20 May 2009)
+
+  20 May 2009; Vlastimil Babka <caster@gentoo.org> +fop-0.95.ebuild:
+  Version bump, bug #202775. Thanks to Jiri Tyr and Mike Weissman.
 
   05 Jan 2009; Serkan Kaba <serkan@gentoo.org> fop-0.93-r1.ebuild:
   Migrate to EAPI 2 to fix the dependencies.
